--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </font><br>
 <br>
 <center><h1><font face= "Elephant" size= "10" color= "black">Kenia Os<br></h1></font><br>
-<img src= "F:\proyecto html\keniafuerza.jpg" width="400" height="450">
+<img src= "https://raw.githubusercontent.com/christiancastilloalvisoOS/keniaostupatronaytecallas/main/imagenes/6cd25856-9dab-4eda-90b8-cabfc4942183.jpg" width="400" height="450">
 <img src= "F:\proyecto html\6cd25856-9dab-4eda-90b8-cabfc4942183.jpg" width="400" height="450">
 <img src= "F:\proyecto html\WhatsApp Image 2024-03-06 at 9.36.01 AM.jpeg" width="400" height="450"></img>
 <br>
