--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <center><h1><font face= "Elephant" size= "10" color= "black">Kenia Os<br></h1></font><br>
 <img src= "https://raw.githubusercontent.com/christiancastilloalvisoOS/keniaostupatronaytecallas/main/imagenes/6cd25856-9dab-4eda-90b8-cabfc4942183.jpg" width="400" height="450">
 <img src= "https://raw.githubusercontent.com/christiancastilloalvisoOS/keniaostupatronaytecallas/main/imagenes2/keniaprin.jpeg" width="400" height="450">
-<img src= "https://raw.githubusercontent.com/christiancastilloalvisoOS/keniaostupatronaytecallas/main/imagenes2/keniaosfuerza.jpg" width="400" height="450"></img>
+<img src= "https://github.com/christiancastilloalvisoOS/keniaostupatronaytecallas/blob/main/imagenes2/keniator.jpg?raw=true" width="400" height="450"></img>
 <br>
 <br>
 <font face= "Baskerville Old Face" size= "10" color= "black">Biografia<br></font><br>
