--- a/hitbobo.html
+++ b/hitbobo.html
@@ -4,11 +4,11 @@
 <br>
 <center><h1><font face= "Bookman Old Style" size= "30" color= "black">Bobo<br>Kenia OS, Alvaro Diaz<br>
 <br><CENTER><audio controls>
-<source src="musica/Kenia OS - Ojo X Ojo (Video Oficial).mp3" Type="audio/mpeg">
+<source src="musica/Kenia OS, Alvaro Diaz - Bobo (Video Oficial).mp3" Type="audio/mpeg">
 </audio>
 <br><br>
 <video controls>
-<source src="vvideos/Kenia OS, Alvaro Diaz - Bobo (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
+<source src="videos/Kenia OS, Alvaro Diaz - Bobo (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
 </video>
 <br>
 <a href="https://youtu.be/4IgtGo1H4ig?si=6Va7MTYOe5YMfnzD">Link de YouTube</a><br>
