--- a/hitiloviu.html
+++ b/hitiloviu.html
@@ -4,11 +4,11 @@
 <br>
 <center><h1><font face= "Bookman Old Style" size= "30" color= "black"> Lovelove U <br>Kenia OS <br>
 <br><CENTER><audio controls>
-<source src="F:\proyecto html\Kenia OS - Lovelove U (Video Oficial).mp3" Type="audio/mpeg">
+<source src="musica/Kenia OS - Lovelove U (Video Oficial).mp3" Type="audio/mpeg">
 </audio>
 <br><br>
 <video controls>
-<source src="F:\proyecto html\Kenia OS - Lovelove U (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
+<source src="videos/Kenia OS - Lovelove U (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
 </video>
 <br>
 <a href="https://youtu.be/qzWoi3ZvrdI?si=16uetvmRHIiu9UMv">Link de YouTube</a><br>
@@ -33,7 +33,7 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
  <body> 
 
 <ul class="menuHoriz1">
-<li><a href="F:\proyecto html\carreramusic.html">Carrera Musical</a></li></ul>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/carreramusic.html">Carrera Musical</a></li></ul>
 
 </body>
 </html>
