--- a/hitllevatelo.html
+++ b/hitllevatelo.html
@@ -4,11 +4,11 @@
 <br>
 <center><h1><font face= "Bookman Old Style" size= "30" color= "black">Llévatelo<br>Kenia OS <br>
 <br><CENTER><audio controls>
-<source src="F:\proyecto html\Kenia OS - Llévatelo (Video Oficial).mp3" Type="audio/mpeg">
+<source src="musica/Kenia OS - Llévatelo (Video Oficial).mp3" Type="audio/mpeg">
 </audio>
 <br><br>
 <video controls>
-<source src="F:\proyecto html\Kenia OS - Llévatelo (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
+<source src="musica/Kenia OS - Llévatelo (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
 </video>
 <br>
 <a href="https://youtu.be/eY8mPCd-JjQ?si=-LFQAryER7kKDQwo">Link de YouTube</a><br>
@@ -32,7 +32,7 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
  <body> 
 
 <ul class="menuHoriz1">
-<li><a href="F:\proyecto html\carreramusic.html">Carrera Musical</a></li></ul>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/carreramusic.html">Carrera Musical</a></li></ul>
 
 </body>
 </html>
