--- a/hitojoxojo.html
+++ b/hitojoxojo.html
@@ -4,11 +4,11 @@
 <br>
 <center><h1><font face= "Bookman Old Style" size= "30" color= "black"> Ojo X Ojo<br>Kenia OS <br>
 <br><CENTER><audio controls>
-<source src="F:\proyecto html\Kenia OS - Ojo X Ojo (Video Oficial).mp3" Type="audio/mpeg">
+<source src="musica\Kenia OS - Ojo X Ojo (Video Oficial).mp3" Type="audio/mpeg">
 </audio>
 <br><br>
 <video controls>
-<source src="F:\proyecto html\Kenia OS - Ojo X Ojo (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
+<source src="videos\Kenia OS - Ojo X Ojo (Video Oficial)..mp4" width="800" height="500"> type="video/mp4"
 </video>
 <br>
 <a href="https://youtu.be/R8Q8vqVT_HI?si=Yp41GHlvVnNaW0Hl">Link de YouTube</a><br>
@@ -32,7 +32,7 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
  <body> 
 
 <ul class="menuHoriz1">
-<li><a href="F:\proyecto html\carreramusic.html">Carrera Musical</a></li></ul>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/carreramusic.html">Carrera Musical</a></li></ul>
 
 </body>
 </html>
