--- a/carreramusic.html
+++ b/carreramusic.html
@@ -31,13 +31,13 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
  <body> 
 
 <ul class="menuHoriz1"> 
-<li><a href="F:\proyecto html\hitbobo.html">Bobo</a></li>
-<li> <a href="F:\proyecto html\hitllevatelo.html">Llevatelo</a> </li>
-<li> <a href="F:\proyecto html\hitojoxojo.html">Ojo x Ojo</a> </li>
-<li><a href="F:\proyecto html\hitpordentro.html">Por dendtro</a></li>
-<li> <a href="F:\proyecto html\hitiloviu.html">Love Love U </a></li>
-<li> <a href="F:\proyecto html\hitmalasdecisiones.html">Malas Decisiones</a> </li>
-<li> <a href="F:\proyecto html\proyecto.html">Pagina Principal</a> </li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/hitbobo.html">Bobo</a></li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/hitllevatelo.html">Llevatelo</a> </li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/hitojoxojo.html">Ojo x Ojo</a> </li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/hitpordentro.html">Por dendtro</a></li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/hitiloviu.html">Love Love U </a></li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/hitmalasdecisiones.html">Malas Decisiones</a> </li>
+<li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/index.html">Pagina Principal</a> </li>
 </ul>
 </body>
 </html>
