--- a/maquillaje.html
+++ b/maquillaje.html
@@ -2,9 +2,9 @@
 <body>
 <body bgcolor="#ffb5e8">
 <br><br>
-<center><h1><font face= "Bookman Old Style" size= "30" color= "black"> K Os Beauty &nbsp&nbsp&nbsp<img src= "F:\proyecto html\1726eb92cc0a0a07217790428958.jpg" width="200" height="200"></img><br></h1><br></center></font></center>
+<center><h1><font face= "Bookman Old Style" size= "30" color= "black"> K Os Beauty &nbsp&nbsp&nbsp<img src= "imagenes/1726eb92cc0a0a07217790428958.jpg" width="200" height="200"></img><br></h1><br></center></font></center>
 <font face= "Baskerville Old Face" size= "10" color= "black">Pagina Oficial:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-<img src= "F:\proyecto html\mac.jpg" width="200" height="250"></img>
+<img src= "imagenes/mac.jpg" width="200" height="250"></img>
 <br></font>
 <font face= "Baskerville Old Face" size= "05" color= "black">
 <a href="https://www.kosbeauty.mx/">PAGINA OFICIAL DE LA TIENDA</a><br>
@@ -12,8 +12,8 @@
 <br>
 <br>
 <font face= "Baskerville Old Face" size= "05" color= "white">Labiales &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Paleta de Maquillaje &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Lipstick<br>
-<img src= "f:\proyecto html\labiales.jpg"></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src= "F:\proyecto html\sombra.jpg"></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-<img src= "F:\proyecto html\lipstik.jpg"></img><br><br><br>
+<img src= "imagenes/labiales.jpg"></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src= "imagenes/sombra.jpg"></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<img src= "imagenes/lipstik.jpg"></img><br><br><br>
 <table border="3" bordercolor=white>
 <tr>
 <td>Productos</td>
@@ -41,8 +41,8 @@ Libre de plomo.</td>
 </table>
 <br>
 
-<img src= "F:\proyecto html\06e9316c-fba1-425e-921a-98afcfec672f.jpg""></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src= "F:\proyecto html\56ab5766-b0b1-42a5-b41b-eee5dafcf100.jpg"></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-<img src= "F:\proyecto html\a00815bd-4a65-4015-bcdb-444b537a6797.jpg"></img>
+<img src= "imagenes/06e9316c-fba1-425e-921a-98afcfec672f.jpg""></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src= "imagenes/56ab5766-b0b1-42a5-b41b-eee5dafcf100.jpg"></img>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<img src= "imagenes/a00815bd-4a65-4015-bcdb-444b537a6797.jpg"></img>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> <html xmlns="http://www.w3.org/1999/xhtml"> <head>
 
@@ -63,7 +63,7 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
 
 <ul class="menuHoriz1"> 
 
-<li> <a href="F:\proyecto html\proyecto.html">Pagina Principal</a> </li>
+<li> <a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/index.html">Pagina Principal</a> </li>
 </ul>
 </body>
 </html>
