--- a/testparafans.html
+++ b/testparafans.html
@@ -48,7 +48,7 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
  <body> 
 
 <ul class="menuHoriz1"> 
-<li> <a href="F:\proyecto html\proyecto.html">Pagina Principal</a> </li>
+<li> <a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/index.html">Pagina Principal</a> </li>
 </ul>
 </body>
 </html>
