--- a/testparafans.html
+++ b/testparafans.html
@@ -28,7 +28,7 @@
 <p><input type="radio" value="v4" name="R1">Falto informacion</p>
 <p><input type="submit" value="Click aqui para enviar formulario"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <input type="reset" value="Click aqui para reiniciar"></p>
 <br>
-<img src= "F:\proyecto html\17daeaea-65ef-4842-9c1c-d091c7f603e2.jpg" width="400" height="450"></img>
+<img src= "imagenes2/keniatortura.jpg" width="400" height="450"></img>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> <html xmlns="http://www.w3.org/1999/xhtml"> <head>
 
