--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ ul.menuHoriz1 li:hover {background-color: #7c4dff;}
 
 <ul class="menuHoriz1">
 <li><a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/carreramusic.html">Carrera Musical</a></li>
-<li> <a href="F:\proyecto html\maquillaje.html">Tienda de Maquillaje</a> </li>
-<li> <a href="F:\proyecto html\testparafans.html">Test para Fans</a> </li>
+<li> <a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/maquillaje.html">Tienda de Maquillaje</a> </li>
+<li> <a href="https://christiancastilloalvisoos.github.io/keniaostupatronaytecallas/testparafans.html">Test para Fans</a> </li>
 </ul>
 
 </body>
